// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Artist/Artist.tools.svelte: Default 1`] = `
<div>
   
  <span
    class="svelte-9e8ghi"
    role="article"
  >
    <div
      class="content svelte-9e8ghi"
    >
      <span
        class="artwork svelte-9e8ghi"
      >
        <img
          alt="./avatar.jpg"
          class="h-full w-full rounded-full svelte-dtt58s"
          height="256"
          loading="lazy"
          src="./avatar.jpg"
          width="256"
        />
         
        
      </span>
       
      <p
        class="controls svelte-9e8ghi"
      >
         
        <button
          class="primary iconOnly large svelte-1vd9h50"
          data-testid="play"
        >
          <i
            class="material-icons svelte-1vd9h50"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-1vd9h50"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-1vd9h50"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-9e8ghi"
    >
      <h3
        class="svelte-9e8ghi"
      >
        Foo Fighters
      </h3>
       
      <h4
        class="svelte-1vmk98n"
        slot="details"
      >
        2 albums
      </h4>
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Artist/Artist.tools.svelte: No album 1`] = `
<div>
   
  <span
    class="svelte-9e8ghi"
    role="article"
  >
    <div
      class="content svelte-9e8ghi"
    >
      <span
        class="artwork svelte-9e8ghi"
      >
        <img
          alt="./avatar.jpg"
          class="h-full w-full rounded-full svelte-dtt58s"
          height="256"
          loading="lazy"
          src="./avatar.jpg"
          width="256"
        />
         
        
      </span>
       
      <p
        class="controls svelte-9e8ghi"
      >
         
        <button
          class="primary iconOnly large svelte-1vd9h50"
          data-testid="play"
        >
          <i
            class="material-icons svelte-1vd9h50"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-1vd9h50"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-1vd9h50"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-9e8ghi"
    >
      <h3
        class="svelte-9e8ghi"
      >
        Foo Fighters
      </h3>
       
      <h4
        class="svelte-1vmk98n"
        slot="details"
      />
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Artist/Artist.tools.svelte: Unknown 1`] = `
<div>
   
  <span
    class="svelte-9e8ghi"
    role="article"
  >
    <div
      class="content svelte-9e8ghi"
    >
      <span
        class="artwork svelte-9e8ghi"
      >
        <img
          class="h-full w-full rounded-full hidden svelte-dtt58s"
          height="256"
          loading="lazy"
          width="256"
        />
         
        <span
          class="h-full w-full svelte-dtt58s rounded-full"
        >
          <i
            class="material-icons svelte-dtt58s"
          >
            person
          </i>
        </span>
        
      </span>
       
      <p
        class="controls svelte-9e8ghi"
      >
         
        <button
          class="primary iconOnly large svelte-1vd9h50"
          data-testid="play"
        >
          <i
            class="material-icons svelte-1vd9h50"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-1vd9h50"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-1vd9h50"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-9e8ghi"
    >
      <h3
        class="svelte-9e8ghi"
      >
        Unknown
      </h3>
       
      <h4
        class="svelte-1vmk98n"
        slot="details"
      >
        2 albums
      </h4>
    </header>
  </span>
</div>
`;
